Wrote some more on my thesis, death is real

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -9,9 +9,9 @@
 
 \chapter{Sensor server software}
 \section{Client}
-\subsection{sensor\_client.c}
+\subsection{sensor\_client.c}\label{sensor_server.c}
 	\ccode{../server/sensor_client.c}
-\subsection{sensor\_client.h}
+\subsection{sensor\_client.h}\label{sensor_server.h}
 	\ccode{../server/sensor_client.h}
 \subsection{client\_config.ini}
 	\ccode{../server/client_config.ini}
@@ -26,8 +26,8 @@
 \subsection{config.ini}
 	\ccode{../server/config.ini}
 
-\subsection{sensor\_server\_commons.h}
-	\ccode{../server/sensor_server_commons.h}
+\subsection{sensor\_server\_common.h}
+	\ccode{../server/sensor_server_common.h}
 
 \subsection{session.c}
 	\ccode{../server/session.c}
