--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -4,6 +4,28 @@
    PUBLISHER = "Prentice-Hall, Inc.",
    YEAR = 1988
   }
+
+@BOOK {UNIXN_WBA,
+  AUTHOR = "W. Richard Stevens, Bill Fenner, Andre M. Rudoff",
+  TITLE = "Unix Network Programming: The sockets Networking API",
+  VOLUME = 1,
+  EDITION = 3,
+  PUBLISHER = "Addison-Wesley"
+}
+
+@BOOK {LINUX_KERNEL,
+  AUTHOR = "Daniel P.Bovet, Marco Cesati",
+  PUBLISHER = "O'Reilly",
+  TITLE = "Understanding the Linux Kernel: From I/O ports to process management",
+  EDITION = 3,
+  ISBN = "0-596-00213-0"
+}
+
+@misc {KAZU_LIST,
+  author = "Kazutomo Yoshi",
+  howpublished = {\url{http://www.mcs.anl.gov/~kazutomo/list/index.html}},
+  note = {Accessed: 15-10-2015}
+}
   
 @article{HengChouGao14,
     author    = "Liang Heng, Daniel Chou, Grace Xingxin Gao",
